--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
           </svg>
       </button>
       <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-        <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+        <ul class="text-xl flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700 ">
           <li>
-            <a href="#home" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-secondary hover:text-red-600" aria-current="page">Home</a>
+            <a href="#home" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-secondary hover:text-red-600 transition" aria-current="page">Home</a> 
           </li>
           <li>
-            <a href="#why-it-matters" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-secondary hover:text-red-600">Why it matters?</a>
+            <a href="#why-it-matters" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-secondary hover:text-red-600 transition">Why it matters?</a>
           </li>
           <li>
-            <a href="#stats" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-secondary hover:text-red-600">Stats</a>
+            <a href="#stats" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-secondary hover:text-red-600 transition">Stats</a>
           </li>
           <li>
-            <a href="#action-steps" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-secondary hover:text-red-600">What can you do?</a>
+            <a href="#action-steps" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-secondary hover:text-red-600 transition">What can you do?</a>
           </li>
           <li>
-            <a href="#conclusion" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-secondary hover:text-red-600">Conclusion</a>
+            <a href="#conclusion" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-secondary hover:text-red-600 transition">Conclusion</a>
           </li>
         </ul>
       </div>
@@ -51,7 +51,7 @@
   <section class="bg-white dark:bg-gray-900" id="home">
     <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
         <div class="mr-auto place-self-center lg:col-span-7">
-            <h1 class="max-w-2xl mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">Porn addiction :</h1>
+            <h1 class="max-w-2xl mb-4 text-6xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl text-white">Porn addiction :</h1>
             <h1 class="max-w-2xl mb-10 text-4xl font-bold tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">The silent destroyer of our generation.</h1>
             <h2 class="max-w-2xl mb-4 text-4xl font-bold tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">Take control today.</h2>
         </div>
@@ -65,38 +65,38 @@
 <section class="bg-white dark:bg-gray-900" id="why-it-matters">
   <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-4">
       <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400 ">
-        <h1 class="max-w-2xl mb-0 text-4xl font-bold tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">Why it matters?</h1>
+        <h1 class="max-w-2xl mb-0 text-4xl font-bold tracking-tight leading-none md:text-5xl xl:text-6xl text-white">Why it matters?</h1>
         <div class="container pt-10 pb-15">
           <ol class="space-y-2">
-            <li class="flex text-base text-body-color text-gray-300">
+            <li class="flex text-body-color text-gray-300">
               <span
-                class="mr-2.5 flex h-[26px] w-full max-w-[26px] items-center justify-center rounded-sm bg-[#ff3f4c] text-base text-white">
+                class="mr-2.5 flex h-[26px] w-full max-w-[26px] items-center justify-center rounded-sm bg-[#ff3f4c] text-white hover:shadow">
                 1
               </span>
               Porn floods the brain with dopamine, training it to seek quick gratification. Over time, this reduces motivation, focus, and real-world satisfaction.
             </li>
-            <li class="flex text-base text-body-color text-gray-300">
+            <li class="flex  text-body-color text-gray-300">
               <span
                 class="mr-2.5 flex h-[26px] w-full max-w-[26px] items-center justify-center rounded-sm bg-[#ff3f4c] text-base text-white">
                 2
               </span>
               It impacts mental health. Research links consistent porn use with increased anxiety, depression, and social withdrawal.
             </li>
-            <li class="flex text-base text-body-color text-gray-300">
+            <li class="flex text-body-color text-gray-300">
               <span
-                class="mr-2.5 flex h-[26px] w-full max-w-[26px] items-center justify-center rounded-sm bg-[#ff3f4c] text-base text-white hover:bg-fuchsia-500">
+                class="mr-2.5 flex h-[26px] w-full max-w-[26px] items-center justify-center rounded-sm bg-[#ff3f4c] text-base text-white ">
                 3
               </span>
               It harms relationships. It distorts expectations around intimacy and connection, often leading to dissatisfaction or emotional disconnection in real-life relationships.
             </li>
-            <li class="flex text-base text-body-color text-gray-300">
+            <li class="flex text-body-color text-gray-300">
               <span
                 class="mr-2.5 flex h-[26px] w-full max-w-[26px] items-center justify-center rounded-sm bg-[#ff3f4c] text-base text-white">
                 4
               </span>
               It affects productivity and life goals. Hours lost. Sleep disturbed. Energy drained. It’s stealing time and focus from the next generation.
             </li>
-            <li class="flex text-base text-body-color text-gray-300">
+            <li class="flex text-body-color text-gray-300">
               <span
                 class="mr-2.5 flex h-[26px] w-full max-w-[26px] items-center justify-center rounded-sm bg-[#ff3f4c] text-base text-white">
                 5
@@ -112,8 +112,8 @@
 <!-- Statistics Section -->
 <section class="bg-gray-100 py-16 dark:bg-gray-200" id="stats">
   <div class="max-w-6xl mx-auto px-6 text-center">
-    <h2 class="text-3xl font-bold mb-4">Numbers don't lie</h2>
-    <p class="text-gray-600 mt-0 mb-10">Take a look at these statistics from around the world.</p>
+    <h2 class="text-4xl font-bold mb-4">Numbers don't lie</h2>
+    <p class="text-gray-600  mb-10">Take a look at these statistics from around the world.</p>
     <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
       <div>
         <h3 class="text-4xl font-bold text-red-600">200K+</h3>
@@ -138,11 +138,14 @@
 <!-- What can I do about it? section -->
 <section class="bg-gray-900 py-16" id="action-steps">
   <div class="max-w-6xl mx-auto px-6">
-    <h2 class="text-3xl md:text-4xl font-bold text-white mb-4 text-center">
+    <h2 class="text-4xl md:text-4xl font-bold text-white mb-4 text-center">
       What Can I Do About It?
     </h2>
-    <p class="text-center text-white mb-12 max-w-2xl mx-auto">
-      Breaking free starts with awareness and action. Here are small, powerful steps you can take today.
+    <p class="text-center text-white text-2xl  max-w-2xl mx-auto">
+      Breaking free starts with awareness and action.
+    </p>
+    <p class="text-center text-white text-2xl mb-20 max-w-2xl mx-auto">
+      Here are small, powerful steps you can take today.
     </p>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
@@ -156,7 +159,7 @@
         </div>
         <div>
           <h4 class="text-xl font-semibold text-white">Recognize the Signs</h4>
-          <p class="text-gray-300 mt-1">Are you watching more than you want to? Is it affecting your focus or mood? Acknowledge the impact.</p>
+          <p class="text-gray-300 ">Are you watching more than you want to? Is it affecting your focus or mood? Acknowledge the impact.</p>
         </div>
       </div>
 
@@ -204,7 +207,7 @@
 <!-- sub-footer -->
 <section class="flex items-center justify-center py-16 bg-[#0b0f1a] text-white px-4">
   <div class="text-center">
-    <h2 class="text-5xl md:text-7xl font-extrabold uppercase tracking-wide">
+    <h2 class="text-6xl md:text-6xl font-extrabold uppercase tracking-wide">
       Hey, you got this.
     </h2>
     <h4 class="text-xl font-semibold text-white mt-10">Reclaim your habits, Reclaim your life.</h4>
@@ -212,7 +215,7 @@
 </section>
 
 <!-- footer -->
-<footer class="bg-[#0b0f1a] text-gray-400 px-6 py-12 " id="conclusion">
+<footer class=" border-t border-gray-700 bg-[#0b0f1a] text-gray-400 px-6 py-12" id="conclusion">
   <div class="max-w-7xl mx-auto flex flex-col md:flex-row md:justify-center md:items-start gap-10 border-gray-700">
 
     <!-- Brand/Logo Section -->
@@ -222,28 +225,30 @@
         <!-- <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Pixel Slave</span> -->
       </a>
       <p class="text-sm leading-relaxed max-w-sm">
-        Empowering mindful digital habits. Reclaim your time and attention in the modern age.
+        Empowering mindful digital habits.
+      </p>
+      <p class="text-sm leading-relaxed max-w-sm">
+        Reclaim your time and attention in the modern age.
       </p>
     </div>
 
     <!-- Social Media -->
     <div class="flex-1 ">
-      <h3 class="text-lg font-semibold text-white mb-4 ml-3 ">Connect with me</h3>
+      <h3 class="text-lg font-semibold text-white mb-4">Connect with me</h3>
       <div class="flex space-x-4">
-        <a href="https://instagram.com/captain_mell0" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="text-gray-400 hover:text-white transition"></a>
+        <a href="https://www.instagram.com/captain_mell0/" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="text-gray-400 hover:text-white transition">
         <svg class="w-6 h-6 hover:text-red-600 transition cursor-pointer" fill="currentColor" viewBox="0 0 27 24">
         <path d="M12 2.2c3.2 0 3.6 0 4.8.1 1.2.1 1.8.2 2.2.4.5.2.9.5 1.3.9s.7.8.9 1.3c.2.4.3 1 .4 2.2.1 1.2.1 1.6.1 4.8s0 3.6-.1 4.8c-.1 1.2-.2 1.8-.4 2.2-.2.5-.5.9-.9 1.3s-.8.7-1.3.9c-.4.2-1 .3-2.2.4-1.2.1-1.6.1-4.8.1s-3.6 0-4.8-.1c-1.2-.1-1.8-.2-2.2-.4a3.4 3.4 0 0 1-2.2-2.2c-.2-.4-.3-1-.4-2.2-.1-1.2-.1-1.6-.1-4.8s0-3.6.1-4.8c.1-1.2.2-1.8.4-2.2.2-.5.5-.9.9-1.3s.8-.7 1.3-.9c.4-.2 1-.3 2.2-.4 1.2-.1 1.6-.1 4.8-.1M12 0C8.7 0 8.3 0 7.1.1 5.9.1 4.9.3 4 .7c-.9.4-1.7.9-2.5 1.7C.7 3.2.3 4 .1 5c-.3.9-.5 1.9-.6 3.1C-.1 9.3 0 9.7 0 12s-.1 2.7.1 3.9c.1 1.2.3 2.2.6 3.1.4.9.9 1.7 1.7 2.5.8.8 1.6 1.3 2.5 1.7.9.4 1.9.6 3.1.6 1.2.1 1.6.1 4.9.1s3.7 0 4.9-.1c1.2-.1 2.2-.3 3.1-.6.9-.4 1.7-.9 2.5-1.7.8-.8 1.3-1.6 1.7-2.5.4-.9.6-1.9.6-3.1.1-1.2.1-1.6.1-4.9s0-3.7-.1-4.9c-.1-1.2-.3-2.2-.6-3.1-.4-.9-.9-1.7-1.7-2.5C20.8.7 20 .3 19 .1c-.9-.3-1.9-.5-3.1-.6C15.3 0 14.9 0 12 0zm0 5.8a6.2 6.2 0 1 0 0 12.4 6.2 6.2 0 0 0 0-12.4zm0 10.2a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm6.4-11.6a1.4 1.4 0 1 0 0 2.8 1.4 1.4 0 0 0 0-2.8z" />
         </svg>
       </a>
         
-      <a href="https://github.com/abythomas300" target="_blank" rel="noopener noreferrer" aria-label="GitHub" class="text-gray-400 hover:text-white transition "></a>
+      <a href="https://github.com/abythomas300" target="_blank" rel="noopener noreferrer" aria-label="GitHub" class="text-gray-400 hover:text-white transition">
       <svg class="w-6 h-6 hover:text-red-600 transition cursor-pointer" fill="currentColor" viewBox="0 0 26 24">
       <path d="M12 .3a12 12 0 0 0-3.8 23.4c.6.1.8-.2.8-.5v-1.7c-3.3.7-4-1.6-4-1.6a3.2 3.2 0 0 0-1.3-1.7c-1.1-.8 0-.8 0-.8a2.6 2.6 0 0 1 1.9 1.3 2.7 2.7 0 0 0 3.7 1 2.7 2.7 0 0 1 .8-1.7c-2.6-.3-5.4-1.3-5.4-6a4.7 4.7 0 0 1 1.2-3.2 4.3 4.3 0 0 1 .1-3.1s1-.3 3.3 1.2a11.2 11.2 0 0 1 6 0c2.3-1.5 3.3-1.2 3.3-1.2a4.3 4.3 0 0 1 .1 3.1 4.7 4.7 0 0 1 1.2 3.2c0 4.7-2.8 5.8-5.4 6a3 3 0 0 1 .9 2.3v3.3c0 .3.2.6.8.5A12 12 0 0 0 12 .3z" />
       </svg>
       </a>
 
-      <a href="https://x.com/abythomas7" target="_blank" rel="noopener noreferrer" aria-label="Twitter" class="text-gray-400 hover:text-white transition"></a>
-  
+      <a href="https://x.com/abythomas7" target="_blank" rel="noopener noreferrer" aria-label="Twitter" class="text-gray-400 hover:text-white transition">
       <svg class="w-6 h-6 hover:text-red-600 transition cursor-pointer" fill="currentColor" viewBox=" 0 26 24">
       <path d="M23.4 4.8c-.8.4-1.6.7-2.4.8a4.3 4.3 0 0 0 1.9-2.4c-.9.6-1.9 1-3 .9a4.4 4.4 0 0 0-7.5 4A12.4 12.4 0 0 1 3 3.1a4.4 4.4 0 0 0 1.4 5.9 4.2 4.2 0 0 1-2-.6v.1a4.4 4.4 0 0 0 3.6 4.3 4.3 4.3 0 0 1-2 .1 4.4 4.4 0 0 0 4.1 3.1A8.9 8.9 0 0 1 2 18.4a12.3 12.3 0 0 0 6.6 1.9c7.9 0 12.2-6.5 12.2-12.2v-.6a8.8 8.8 0 0 0 2.2-2.2z" />
       </svg>
@@ -255,8 +260,8 @@
   </div>
 
   <!-- Divider & Bottom Line -->
-  <div class="mt-10 border-t border-gray-700 pt-6 text-center text-xs text-gray-500">
-    &copy; 2025 Aby Thomas
+  <div class="mt-10  pt-6 text-center text-sm text-gray-500">
+    &copy; 2025 <a href="https://github.com/abythomas300" class="pointer hover:text-red-600 transition ml-3">Aby Thomas</a>
   </div>
 </footer>
 
