--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable" >
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="icon" type="image/svg+xml" href="./assets/images/favicon.svg">
     <title>Reclaim</title>
@@ -19,29 +19,28 @@
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a href="#" class="flex items-center space-x-3">
           <img src="./assets/images/reclaim-logo.svg" class="h-13" alt="Reclaim Logo"/>
-          <!-- <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Pixel Slave</span> -->
       </a>
-      <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+      <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 text-gray-400 hover:bg-gray-700" aria-controls="navbar-default" aria-expanded="false">
           <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
               <path stroke="#ff3f4c" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M1 1h15M1 7h15M1 13h15"/>
           </svg>
       </button>
       <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-        <ul class="text-xl flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700 ">
+        <ul class="text-xl flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 bg-gray-900 border-gray-700 ">
           <li>
-            <a href="#home" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-secondary hover:text-red-600 transition" aria-current="page">Home</a> 
+            <a href="#home" class="block py-2 px-3 text-white  rounded-sm md:bg-transparent md:text-white-700 md:p-0  hover:text-red-600 transition" aria-current="page">Home</a> 
           </li>
           <li>
-            <a href="#why-it-matters" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-secondary hover:text-red-600 transition">Why it matters?</a>
+            <a href="#why-it-matters" class="block py-2 px-3 text-white rounded-sm md:bg-transparent md:text-white-700 md:p-0 hover:text-red-600 transition">Why it matters?</a>
           </li>
           <li>
-            <a href="#stats" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-secondary hover:text-red-600 transition">Stats</a>
+            <a href="#stats" class="block py-2 px-3 text-white rounded-sm md:bg-transparent md:text-white-700 md:p-0 hover:text-red-600 transition">Stats</a>
           </li>
           <li>
-            <a href="#action-steps" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-secondary hover:text-red-600 transition">What can you do?</a>
+            <a href="#action-steps" class="block py-2 px-3 text-white rounded-sm md:bg-transparent md:text-white-700 md:p-0  hover:text-red-600 transition">What can you do?</a>
           </li>
           <li>
-            <a href="#conclusion" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-secondary hover:text-red-600 transition">Conclusion</a>
+            <a href="#conclusion" class="block py-2 px-3 text-white rounded-sm md:bg-transparent md:text-white-700 md:p-0 hover:text-red-600 transition">Conclusion</a>
           </li>
         </ul>
       </div>
@@ -49,12 +48,12 @@
   </nav>    
 
   <!-- Hero Section -->
-  <section class="bg-white dark:bg-gray-900" id="home">
+  <section class="bg-gray-900" id="home">
     <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
         <div class="mr-auto place-self-center lg:col-span-7">
-            <h1 class="max-w-2xl mb-4 text-6xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl text-white">Porn addiction :</h1>
-            <h1 class="max-w-2xl mb-10 text-4xl font-bold tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">The silent destroyer of our generation.</h1>
-            <h2 class="max-w-2xl mb-4 text-4xl font-bold tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">Take control today.</h2>
+            <h1 class="max-w-2xl mb-4 text-6xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl text-white">Porn addiction </h1>
+            <h1 class="max-w-2xl mb-10 text-4xl font-bold tracking-tight leading-none md:text-5xl xl:text-6xl text-white">The silent destroyer of our generation</h1>
+            <h2 class="max-w-2xl mb-4 text-4xl font-bold tracking-tight leading-none md:text-5xl xl:text-6xl text-white">Take control today</h2>
         </div>
         <div class="lg:mt-0 lg:col-span-5 lg:flex rounded-xl">
             <img src="./assets/images/boy-screen-hero-section-image.png" alt="Boy infront of screen">
@@ -63,9 +62,9 @@
 </section>
 
 <!-- Why it matters section -->
-<section class="bg-white dark:bg-gray-900" id="why-it-matters">
+<section class="bg-gray-900" id="why-it-matters">
   <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-4">
-      <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400 ">
+      <div class="max-w-screen-lg text-gray-500 sm:text-lg">
         <h1 class="max-w-2xl mb-0 text-4xl font-bold tracking-tight leading-none md:text-5xl xl:text-6xl text-white">Why it matters?</h1>
         <div class="container pt-10 pb-15">
           <ol class="space-y-2">
@@ -76,7 +75,7 @@
               </span>
               Porn floods the brain with dopamine, training it to seek quick gratification. Over time, this reduces motivation, focus, and real-world satisfaction.
             </li>
-            <li class="flex  text-body-color text-gray-300">
+            <li class="flex text-body-color text-gray-300">
               <span
                 class="mr-2.5 flex h-[26px] w-full max-w-[26px] items-center justify-center rounded-sm bg-[#ff3f4c] text-base text-white">
                 2
@@ -111,10 +110,10 @@
 </section>
 
 <!-- Statistics Section -->
-<section class="bg-gray-100 py-16 dark:bg-gray-200" id="stats">
+<section class="bg-gray-200 py-16" id="stats">
   <div class="max-w-6xl mx-auto px-6 text-center">
     <h2 class="text-4xl font-bold mb-4">Numbers don't lie</h2>
-    <p class="text-gray-600  mb-10">Take a look at these statistics from around the world.</p>
+    <p class="text-gray-600 mb-10">Take a look at these statistics from around the world.</p>
     <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
       <div>
         <h3 class="text-4xl font-bold text-red-600">200K+</h3>
@@ -160,7 +159,7 @@
         </div>
         <div>
           <h4 class="text-xl font-semibold text-white">Recognize the Signs</h4>
-          <p class="text-gray-300 ">Are you watching more than you want to? Is it affecting your focus or mood? Acknowledge the impact.</p>
+          <p class="text-gray-300">Are you watching more than you want to? Is it affecting your focus or mood? Acknowledge the impact.</p>
         </div>
       </div>
 
@@ -223,7 +222,6 @@
     <div class="flex-1">
       <a href="#home" class="flex items-center space-x-3">
         <img src="./assets/images/reclaim-logo.svg" class="h-13" alt="Reclaim Logo"/>
-        <!-- <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Pixel Slave</span> -->
       </a>
       <p class="text-sm leading-relaxed max-w-sm">
         Empowering mindful digital habits.
