--- a/index.html
+++ b/index.html
@@ -22,25 +22,25 @@
       </a>
       <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 text-gray-400 hover:bg-gray-700" aria-controls="navbar-default" aria-expanded="false">
           <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-              <path stroke="#ff3f4c" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M1 1h15M1 7h15M1 13h15"/>
+              <path stroke="#e63946" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M1 1h15M1 7h15M1 13h15"/>
           </svg>
       </button>
       <div class="hidden w-full md:block md:w-auto" id="navbar-default">
         <ul class="text-xl flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 bg-gray-900 border-gray-700 ">
           <li>
-            <a href="#home" class="block py-2 px-3 text-white  rounded-sm md:bg-transparent md:text-white-700 md:p-0  hover:text-red-600 transition" aria-current="page">Home</a> 
+            <a href="#home" class="block py-2 px-3 text-white  rounded-sm md:bg-transparent md:text-white-700 md:p-0  hover:text-[#e63946] transition" aria-current="page">Home</a> 
           </li>
           <li>
-            <a href="#why-it-matters" class="block py-2 px-3 text-white rounded-sm md:bg-transparent md:text-white-700 md:p-0 hover:text-red-600 transition">Why it matters?</a>
+            <a href="#why-it-matters" class="block py-2 px-3 text-white rounded-sm md:bg-transparent md:text-white-700 md:p-0 hover:text-[#e63946] transition">Why it matters?</a>
           </li>
           <li>
-            <a href="#stats" class="block py-2 px-3 text-white rounded-sm md:bg-transparent md:text-white-700 md:p-0 hover:text-red-600 transition">Stats</a>
+            <a href="#stats" class="block py-2 px-3 text-white rounded-sm md:bg-transparent md:text-white-700 md:p-0 hover:text-[#e63946] transition">Stats</a>
           </li>
           <li>
-            <a href="#action-steps" class="block py-2 px-3 text-white rounded-sm md:bg-transparent md:text-white-700 md:p-0  hover:text-red-600 transition">What can you do?</a>
+            <a href="#action-steps" class="block py-2 px-3 text-white rounded-sm md:bg-transparent md:text-white-700 md:p-0  hover:text-[#e63946] transition">What can you do?</a>
           </li>
           <li>
-            <a href="#conclusion" class="block py-2 px-3 text-white rounded-sm md:bg-transparent md:text-white-700 md:p-0 hover:text-red-600 transition">Conclusion</a>
+            <a href="#conclusion" class="block py-2 px-3 text-white rounded-sm md:bg-transparent md:text-white-700 md:p-0 hover:text-[#e63946] transition">Conclusion</a>
           </li>
         </ul>
       </div>
@@ -70,35 +70,35 @@
           <ol class="space-y-2">
             <li class="flex text-body-color text-gray-300">
               <span
-                class="mr-2.5 flex h-[26px] w-full max-w-[26px] items-center justify-center rounded-sm bg-[#ff3f4c] text-white hover:shadow">
+                class="mr-2.5 flex h-[26px] w-full max-w-[26px] items-center justify-center rounded-sm bg-[#e63946] text-white hover:shadow">
                 1
               </span>
               Porn floods the brain with dopamine, training it to seek quick gratification. Over time, this reduces motivation, focus, and real-world satisfaction.
             </li>
             <li class="flex text-body-color text-gray-300">
               <span
-                class="mr-2.5 flex h-[26px] w-full max-w-[26px] items-center justify-center rounded-sm bg-[#ff3f4c] text-base text-white">
+                class="mr-2.5 flex h-[26px] w-full max-w-[26px] items-center justify-center rounded-sm bg-[#e63946] text-base text-white">
                 2
               </span>
               It impacts mental health. Research links consistent porn use with increased anxiety, depression, and social withdrawal.
             </li>
             <li class="flex text-body-color text-gray-300">
               <span
-                class="mr-2.5 flex h-[26px] w-full max-w-[26px] items-center justify-center rounded-sm bg-[#ff3f4c] text-base text-white ">
+                class="mr-2.5 flex h-[26px] w-full max-w-[26px] items-center justify-center rounded-sm bg-[#e63946] text-base text-white ">
                 3
               </span>
               It harms relationships. It distorts expectations around intimacy and connection, often leading to dissatisfaction or emotional disconnection in real-life relationships.
             </li>
             <li class="flex text-body-color text-gray-300">
               <span
-                class="mr-2.5 flex h-[26px] w-full max-w-[26px] items-center justify-center rounded-sm bg-[#ff3f4c] text-base text-white">
+                class="mr-2.5 flex h-[26px] w-full max-w-[26px] items-center justify-center rounded-sm bg-[#e63946] text-base text-white">
                 4
               </span>
               It affects productivity and life goals. Hours lost. Sleep disturbed. Energy drained. It’s stealing time and focus from the next generation.
             </li>
             <li class="flex text-body-color text-gray-300">
               <span
-                class="mr-2.5 flex h-[26px] w-full max-w-[26px] items-center justify-center rounded-sm bg-[#ff3f4c] text-base text-white">
+                class="mr-2.5 flex h-[26px] w-full max-w-[26px] items-center justify-center rounded-sm bg-[#e63946] text-base text-white">
                 5
               </span>
               And many more . . .
@@ -151,7 +151,7 @@
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
 
       <div class="flex items-start space-x-4">
-        <div class="text-red-500">
+        <div class="text-[#e63946]">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5s8.268 2.943 9.542 7c-1.274 4.057-5.065 7-9.542 7s-8.268-2.943-9.542-7z" />
@@ -164,7 +164,7 @@
       </div>
 
       <div class="flex items-start space-x-4">
-        <div class="text-red-500">
+        <div class="text-[#e63946]">
           <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
             <path stroke-linecap="round" stroke-linejoin="round" d="M12 11c.828 0 1.5.672 1.5 1.5S12.828 14 12 14s-1.5-.672-1.5-1.5S11.172 11 12 11z" />
             <path stroke-linecap="round" stroke-linejoin="round" d="M16 8V6a4 4 0 00-8 0v2m8 0H8m8 0h.5a2.5 2.5 0 012.5 2.5V14a6 6 0 01-12 0v-3.5A2.5 2.5 0 018.5 8H9" />
@@ -177,7 +177,7 @@
       </div>
 
       <div class="flex items-start space-x-4">
-        <div class="text-red-500">
+        <div class="text-[#e63946]">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5" width="32" height="32">
             <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 12h.008v.008H7.5V12zm4.5 0h.008v.008H12V12zm4.5 0h.008v.008H16.5V12z" />
             <path stroke-linecap="round" stroke-linejoin="round" d="M21 12c0 4.418-4.03 8-9 8a9.548 9.548 0 01-4.472-1.07L3 21l1.67-3.34A7.982 7.982 0 013 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
@@ -190,7 +190,7 @@
       </div>
 
       <div class="flex items-start space-x-4">
-        <div class="text-red-500">
+        <div class="text-[#e63946]">
           <svg xmlns="http://www.w3.org/2000/svg" fill="#EF4444" viewBox="0 0 24 24" stroke="none" width="32" height="32">
             <path d="M12.001 4.529c2.349-2.41 6.136-2.412 8.486 0 2.348 2.407 2.35 6.309 0 8.718l-7.09 7.275a1 1 0 01-1.414 0l-7.09-7.275c-2.35-2.409-2.348-6.311 0-8.718 2.35-2.412 6.138-2.41 8.508 0z"/>
           </svg>
@@ -236,19 +236,19 @@
       <h3 class="text-lg font-semibold text-white mb-4">Connect with me</h3>
       <div class="flex space-x-4">
         <a href="https://www.instagram.com/captain_mell0/" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="text-gray-400 hover:text-white transition">
-        <svg class="w-6 h-6 hover:text-red-600 transition cursor-pointer" fill="currentColor" viewBox="0 0 27 24">
+        <svg class="w-6 h-6 hover:text-[#e63946] transition cursor-pointer" fill="currentColor" viewBox="0 0 27 24">
         <path d="M12 2.2c3.2 0 3.6 0 4.8.1 1.2.1 1.8.2 2.2.4.5.2.9.5 1.3.9s.7.8.9 1.3c.2.4.3 1 .4 2.2.1 1.2.1 1.6.1 4.8s0 3.6-.1 4.8c-.1 1.2-.2 1.8-.4 2.2-.2.5-.5.9-.9 1.3s-.8.7-1.3.9c-.4.2-1 .3-2.2.4-1.2.1-1.6.1-4.8.1s-3.6 0-4.8-.1c-1.2-.1-1.8-.2-2.2-.4a3.4 3.4 0 0 1-2.2-2.2c-.2-.4-.3-1-.4-2.2-.1-1.2-.1-1.6-.1-4.8s0-3.6.1-4.8c.1-1.2.2-1.8.4-2.2.2-.5.5-.9.9-1.3s.8-.7 1.3-.9c.4-.2 1-.3 2.2-.4 1.2-.1 1.6-.1 4.8-.1M12 0C8.7 0 8.3 0 7.1.1 5.9.1 4.9.3 4 .7c-.9.4-1.7.9-2.5 1.7C.7 3.2.3 4 .1 5c-.3.9-.5 1.9-.6 3.1C-.1 9.3 0 9.7 0 12s-.1 2.7.1 3.9c.1 1.2.3 2.2.6 3.1.4.9.9 1.7 1.7 2.5.8.8 1.6 1.3 2.5 1.7.9.4 1.9.6 3.1.6 1.2.1 1.6.1 4.9.1s3.7 0 4.9-.1c1.2-.1 2.2-.3 3.1-.6.9-.4 1.7-.9 2.5-1.7.8-.8 1.3-1.6 1.7-2.5.4-.9.6-1.9.6-3.1.1-1.2.1-1.6.1-4.9s0-3.7-.1-4.9c-.1-1.2-.3-2.2-.6-3.1-.4-.9-.9-1.7-1.7-2.5C20.8.7 20 .3 19 .1c-.9-.3-1.9-.5-3.1-.6C15.3 0 14.9 0 12 0zm0 5.8a6.2 6.2 0 1 0 0 12.4 6.2 6.2 0 0 0 0-12.4zm0 10.2a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm6.4-11.6a1.4 1.4 0 1 0 0 2.8 1.4 1.4 0 0 0 0-2.8z" />
         </svg>
       </a>
         
       <a href="https://github.com/abythomas300" target="_blank" rel="noopener noreferrer" aria-label="GitHub" class="text-gray-400 hover:text-white transition">
-      <svg class="w-6 h-6 hover:text-red-600 transition cursor-pointer" fill="currentColor" viewBox="0 0 26 24">
+      <svg class="w-6 h-6 hover:text-[#e63946] transition cursor-pointer" fill="currentColor" viewBox="0 0 26 24">
       <path d="M12 .3a12 12 0 0 0-3.8 23.4c.6.1.8-.2.8-.5v-1.7c-3.3.7-4-1.6-4-1.6a3.2 3.2 0 0 0-1.3-1.7c-1.1-.8 0-.8 0-.8a2.6 2.6 0 0 1 1.9 1.3 2.7 2.7 0 0 0 3.7 1 2.7 2.7 0 0 1 .8-1.7c-2.6-.3-5.4-1.3-5.4-6a4.7 4.7 0 0 1 1.2-3.2 4.3 4.3 0 0 1 .1-3.1s1-.3 3.3 1.2a11.2 11.2 0 0 1 6 0c2.3-1.5 3.3-1.2 3.3-1.2a4.3 4.3 0 0 1 .1 3.1 4.7 4.7 0 0 1 1.2 3.2c0 4.7-2.8 5.8-5.4 6a3 3 0 0 1 .9 2.3v3.3c0 .3.2.6.8.5A12 12 0 0 0 12 .3z" />
       </svg>
       </a>
 
       <a href="https://x.com/abythomas7" target="_blank" rel="noopener noreferrer" aria-label="Twitter" class="text-gray-400 hover:text-white transition">
-      <svg class="w-6 h-6 hover:text-red-600 transition cursor-pointer" fill="currentColor" viewBox=" 0 26 24">
+      <svg class="w-6 h-6 hover:text-[#e63946] transition cursor-pointer" fill="currentColor" viewBox=" 0 26 24">
       <path d="M23.4 4.8c-.8.4-1.6.7-2.4.8a4.3 4.3 0 0 0 1.9-2.4c-.9.6-1.9 1-3 .9a4.4 4.4 0 0 0-7.5 4A12.4 12.4 0 0 1 3 3.1a4.4 4.4 0 0 0 1.4 5.9 4.2 4.2 0 0 1-2-.6v.1a4.4 4.4 0 0 0 3.6 4.3 4.3 4.3 0 0 1-2 .1 4.4 4.4 0 0 0 4.1 3.1A8.9 8.9 0 0 1 2 18.4a12.3 12.3 0 0 0 6.6 1.9c7.9 0 12.2-6.5 12.2-12.2v-.6a8.8 8.8 0 0 0 2.2-2.2z" />
       </svg>
       </a>
@@ -260,7 +260,7 @@
 
   <!-- Divider & Bottom Line -->
   <div class="mt-10  pt-6 text-center text-sm text-gray-500">
-    &copy; 2025 <a href="https://github.com/abythomas300" class="pointer hover:text-red-600 transition ml-3">Aby Thomas</a>
+    &copy; 2025 <a href="https://github.com/abythomas300" class="pointer hover:text-[#e63946] transition ml-3">Aby Thomas</a>
   </div>
 </footer>
 
