--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="max-w-screen-lg text-gray-500 sm:text-lg">
         <h1 class="max-w-2xl mb-0 text-4xl font-bold tracking-tight leading-none md:text-5xl xl:text-6xl text-white">Why it matters?</h1>
         <div class="container pt-10 pb-15">
-          <ol class="space-y-2">
+          <ol class="space-y-2 leading-relaxed">
             <li class="flex text-body-color text-gray-300">
               <span
                 class="mr-2.5 flex h-[26px] w-full max-w-[26px] items-center justify-center rounded-sm bg-[#e63946] text-white hover:shadow">
@@ -138,7 +138,7 @@
 <!-- What can I do about it? section -->
 <section class="bg-gray-900 py-16" id="action-steps">
   <div class="max-w-6xl mx-auto px-6">
-    <h2 class="text-4xl md:text-4xl font-bold text-white mb-4 text-center">
+    <h2 class="text-4xl md:text-4xl font-bold text-white mb-4 text-center leading-relaxed">
       What Can I Do About It?
     </h2>
     <p class="text-center text-white text-2xl  max-w-2xl mx-auto">
@@ -158,8 +158,8 @@
           </svg>
         </div>
         <div>
-          <h4 class="text-xl font-semibold text-white">Recognize the Signs</h4>
-          <p class="text-gray-300">Are you watching more than you want to? Is it affecting your focus or mood? Acknowledge the impact.</p>
+          <h4 class="text-xl font-semibold text-white ">Recognize the Signs</h4>
+          <p class="text-gray-300 ">Are you watching more than you want to? Is it affecting your focus or mood? Acknowledge the impact.</p>
         </div>
       </div>
 
