feat: add animated SOS button linking to emergency resources

--- a/index.html
+++ b/index.html
@@ -261,11 +261,15 @@
 
   </div>
 
-  <!-- Divider & Bottom Line -->
   <div class="mt-10  pt-6 text-center text-sm text-gray-500">
     &copy; 2025 <a href="https://github.com/abythomas300" class="pointer hover:text-[#e63946] transition ml-3">Aby Thomas</a>
   </div>
 </footer>
+
+<!-- SOS button -->
+<a id="sosButton" href="https://helplinefaqs.nami.org/article/44-compulsive-sexual-behavior" target="_blank" class="opacity-0 pointer-events-none transition-opacity duration-300 fixed bottom-3 right-6 z-50 bg-red-600 text-white px-5 py-3 rounded-full shadow-lg hover:bg-red-700  duration-300 text-sm font-semibold after:content-[''] after:absolute after:inset-0 after:rounded-full after:border-1 after:border-red-400 after:animate-ping">
+🚨SOS Help
+</a>
 
 
   <!-- SCRIPTS -->
@@ -281,7 +285,7 @@
        duration: 800,
        once:false,
      });
-
    </script>
+   <script src="script.js"></script>
 </body>
 </html>
