--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" >
     <!--AOS css -->
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" > 
     <!-- Favicon -->
@@ -268,7 +268,7 @@
 
 <!-- SOS button -->
 <a id="sosButton" href="https://helplinefaqs.nami.org/article/44-compulsive-sexual-behavior" target="_blank" class="opacity-0 pointer-events-none transition-opacity duration-300 fixed bottom-3 right-6 z-50 bg-red-600 text-white px-5 py-3 rounded-full shadow-lg hover:bg-red-700  duration-300 text-sm font-semibold after:content-[''] after:absolute after:inset-0 after:rounded-full after:border-1 after:border-red-400 after:animate-ping">
-🚨SOS Help
+  🚨SOS Help
 </a>
 
 
@@ -278,14 +278,6 @@
    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> 
    <!--AOS-->
    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-   <!--AOS initialization-->
-   <script>
-    
-     AOS.init({
-       duration: 800,
-       once:false,
-     });
-   </script>
    <script src="script.js"></script>
 </body>
 </html>
