style: round corners of image for improved appearance

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <h1 class="max-w-2xl mb-10 text-4xl font-bold tracking-tight leading-none md:text-5xl xl:text-6xl text-white">The silent destroyer of our generation</h1>
             <h2 class="max-w-2xl mb-4 text-4xl font-bold tracking-tight leading-none md:text-5xl xl:text-6xl text-white">Take control today</h2>
         </div>
-        <div class="lg:mt-0 lg:col-span-5 lg:flex rounded-xl">
-            <img src="./assets/images/boy-screen-hero-section-image.png" alt="Boy infront of screen">
+        <div class="lg:mt-0 lg:col-span-5 lg:flex">
+            <img src="./assets/images/boy-screen-hero-section-image.png" alt="Boy infront of screen" class="rounded-3xl">
         </div>                
     </div>
 </section>
