--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="#" class="flex items-center space-x-3">
           <img src="./assets/images/reclaim-logo.svg" class="h-13" alt="Reclaim Logo"/>
       </a>
-      <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 text-gray-400 hover:bg-gray-700" aria-controls="navbar-default" aria-expanded="false">
+      <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-[#e63946] text-gray-400 hover:bg-gray-700" aria-controls="navbar-default" aria-expanded="false">
           <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
               <path stroke="#e63946" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M1 1h15M1 7h15M1 13h15"/>
           </svg>
@@ -55,8 +55,8 @@
     <div class="grid max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
         <div class="mr-auto place-self-center lg:col-span-7">
             <h1 class="max-w-2xl mb-4 text-6xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl text-white">Porn addiction </h1>
-            <h1 class="max-w-2xl mb-10 text-4xl font-bold tracking-tight leading-none md:text-5xl xl:text-6xl text-white">The silent destroyer of our generation</h1>
-            <h2 class="max-w-2xl mb-4 text-4xl font-bold tracking-tight leading-none md:text-5xl xl:text-6xl text-white">Take control today</h2>
+            <h1 class="max-w-2xl mb-10 text-4xl font-bold tracking-tight leading-none md:text-5xl xl:text-6xl text-white">The silent destroyer of our generation.</h1>
+            <h2 class="max-w-2xl mb-4 text-4xl font-bold tracking-tight leading-none md:text-5xl xl:text-6xl text-white">Take control today.</h2>
         </div>
         <div class="lg:mt-0 lg:col-span-5 lg:flex">
             <img src="./assets/images/boy-screen-hero-section-image.png" alt="Boy infront of screen" class="rounded-3xl">
