style: add border to hamburger menu only when expanded

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" > 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="./assets/images/favicon.svg"> 
+    <!--Tailwind CDN-->
+   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Reclaim</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@@ -23,13 +25,13 @@
       <a href="#" class="flex items-center space-x-3">
           <img src="./assets/images/reclaim-logo.svg" class="h-13" alt="Reclaim Logo"/>
       </a>
-      <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-[#e63946] text-gray-400 hover:bg-gray-700" aria-controls="navbar-default" aria-expanded="false">
+      <button id="menuToggle" data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none text-gray-400 hover:bg-gray-700 " aria-controls="navbar-default" aria-expanded="false">
           <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
               <path stroke="#e63946" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M1 1h15M1 7h15M1 13h15"/>
           </svg>
       </button>
-      <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-        <ul class="text-xl flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 bg-gray-900 border-gray-700 ">
+      <div class="hidden w-full md:block md:w-auto border-2 border-solid border-[#e63946] rounded-lg mt-5 pb-2 md:border-0 md:rounded-none md:mt-0" id="navbar-default">
+        <ul class="text-xl flex flex-col p-4 md:p-0 mt-2 bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 bg-gray-900 border-gray-700 ">
           <li>
             <a href="#home" class="block py-2 px-3 text-white  rounded-sm md:bg-transparent md:text-white-700 md:p-0  hover:text-[#e63946] transition" aria-current="page">Home</a> 
           </li>
@@ -273,9 +275,7 @@
 
 
   <!-- SCRIPTS -->
-
-   <!--Tailwind CDN-->
-   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> 
+ 
    <!--AOS-->
    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
    <script src="script.js"></script>
